# discovery-research-agent

./: .env.example  .gitignore  agent.py  proposal.py  pyproject.toml  server.py  upwork_scraper.py
static/: index.html  proposals.html
